fix button alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,3 +35,11 @@ img {
    margin:0 15px 0 0;
 }
 
+.dropbtn {
+    float: right;
+}
+
+.dropdown-content {
+    float: right;
+}
+
